[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"chromex" = ""}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project]
name = "chromex"
version = "0.1.0"
requires-python = ">=3.9"
description = "An asynchronous library for chrome automation and extraction."
authors = [
    {name = "Daniel Henderson", email = "me@danhenderson.dev"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "asyncio",
    "selenium",
    "cchardet",
    "beautifulsoup4",
    "webdriver-manager",
    "click"
]

[project.optional-dependencies]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-asyncio",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-trio",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
]

[tool.coverage.paths]
source = ["chromex"]


[tool.coverage.run]
branch = ["true"]
source =[
    "chromex"
]
parallel = ["false"]


[tool.coverage.report]
show_missing = ["true"]
precision = 2


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=.eggs --doctest-modules --tb=long"
norecursedirs = [
    ".git",
    "dist",
    "build",
]
testpaths = [
    "chromex/tests"
]

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true
